classDiagram
    class User {
        Long id
        String username
        String role
        String status
        Integer creditScore
    }
    class Address {
        Long id
        Long userId
        String receiverName
        String detailAddress
        Boolean isDefault
    }
    class MerchantApplication {
        Long id
        Long userId
        String storeName
        Integer status
        String rejectReason
    }
    class UserReport {
        Long id
        Long reporterId
        Long reportedId
        String reasonType
        Integer status
    }
    class UserBlock {
        Long id
        Long blockerId
        Long blockedId
    }
    class CreditScoreLog {
        Long id
        Long userId
        Integer delta
        String reason
    }
    class AdminAuditLog {
        Long id
        Long adminUserId
        String action
        String targetType
        Long targetId
    }
    User "1" --> "0..*" Address : owns
    User "1" --> "0..*" MerchantApplication : submits
    User "1" --> "0..*" UserReport : reports
    User "1" --> "0..*" UserBlock : blocker
    User "1" --> "0..*" CreditScoreLog : has changes
    User "1" --> "0..*" AdminAuditLog : admin actions
    UserReport "0..*" --> "1" User : reported target
    UserBlock "0..*" --> "1" User : blocked target
